Set import button to display:block, fixing text overflow
Bug: T259348

--- a/modules/ext.templateDataGenerator.editTemplatePage/templateDataGenerator.ui.css
+++ b/modules/ext.templateDataGenerator.editTemplatePage/templateDataGenerator.ui.css
@@ -80,10 +80,12 @@
 }
 
 .tdg-templateDataParamImportWidget {
+	display: block;
 	margin-top: 1em;
 }
 
 .tdg-templateDataParamImportWidget > .oo-ui-buttonElement-button {
+	display: block;
 	text-align: left;
 	font-weight: normal;
 }
